# Caduq

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json-template  README.md  premake5.lua
.github/workflows/: compile.yml
Bob/: CMakeLists.txt
Bob/src/: Bob.h
Bob/src/Bob/: Core.h
Bob/src/Bob/Log/: Log.cpp  Log.h
Bob/src/Bob/Profile/: Instrumentor.h
Caduq/: CMakeLists.txt
Caduq/src/: BaseParameters.cpp  BaseParameters.h  BobIntegration.h  Caduq.cpp  Caduq.h  LayerManager.cpp  LayerManager.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp  SandboxCaduq.cpp  SandboxCaduq.h  SandboxCq.cpp  SandboxCq.h  SandboxCq2.cpp  SandboxCq2.h  SandboxFramebuffer.cpp  SandboxFramebuffer.h  SandboxGeo.cpp  SandboxGeo.h  SandboxLayout.cpp  SandboxLayout.h  SandboxSplines.cpp  SandboxSplines.h  SandboxTexture.cpp  SandboxTexture.h  SandboxXPBD.cpp  SandboxXPBD.h  cqpch.cpp  cqpch.h
Caduq/src/Assets/shaders/: flatColor.glsl
Caduq/src/Caduq/: Caduq.cpp  LayerManager.cpp  SandboxCaduq.cpp  SandboxCaduq.h  SandboxCube.cpp  SandboxCube.h  SandboxFramebuffer.cpp  SandboxLayout.cpp  SandboxTexture.cpp  SandboxTexture.h  SandboxXPBD.cpp  SandboxXPBD.h
Caduq/src/Caduq/Assets/shaders/: color.glsl  texture.glsl
Caduq/src/Caduq/Objects/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Frame.cpp  Frame.h  MyImGui.cpp  MyImGui.h  Part.cpp  Part.h  Patch.cpp  Patch.h  Point.cpp  Point.h  Spline.cpp  Spline.h  StlEntity.cpp  StlEntity.h
Caduq/src/Objects/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Frame.cpp  Frame.h  MyImGui.cpp  MyImGui.h  Part.cpp  Part.h  Patch.cpp  Patch.h  PhyXManager.cpp  PhyXManager.h  Point.cpp  Point.h  Spline.cpp  Spline.h  StlEntity.cpp  StlEntity.h
Game/src/: SandboxApp.cpp  SandboxGeo.cpp  SandboxGeo.h
Geotrup/: CMakeLists.txt
Geotrup/src/Geometry/: Frame.cpp  Frame.h  Geo.h  Patch.cpp  Patch.h  Point.cpp  Point.h  Spline.cpp  Spline.h
Geotrup/src/Tools/: FileWriting.cpp  FileWriting.h  STL.cpp  STL.h
Geotrup/src/XPBD/: JAttach.cpp  JAttach.h  Joint.cpp  Joint.h  JointsBuildingBlocks.h  PhyXManager.cpp  PhyXManager.h  PhyXPart.h  Point.cpp  Point.h  StructLayoutInspector.h
Geotrup/src/XPBD_old/: JAttach.h  Point.cpp
Judas-Engine/src/: jepch.h
Judas-Engine/src/Judas-Engine/Core/: Application.cpp  Core.h  EntryPoint.h
Judas-Engine/src/Judas-Engine/Debug/: Instrumentor.h
Judas-Engine/src/Judas-Engine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp
Judas-Engine/src/Judas-Engine/Layers/: LayerStack.cpp
Judas-Engine/src/Judas-Engine/Logging/: Log.h
Judas-Engine/src/Judas-Engine/Platform/OpenGL/: OpenGLContext.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
Judas-Engine/src/Judas-Engine/Platform/Windows/: WindowsWindow.cpp
Judas-Engine/src/Judas-Engine/Renderer/: OrthographicCamera.cpp  OrthographicCameraController.cpp  Renderer2D.cpp  VertexArray.cpp
Scripts/: Lin-GenProject.sh  Win-GenProject.bat
Vizir/: CMakeLists.txt
Vizir/res/Shader/: Basic.shader  Texture.shader
Vizir/src/: Vizir.h  vzpch.h
Vizir/src/Vizir/Core/: Application.cpp  Application.h  BobIntegration.h  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Timestep.h  Window.cpp  Window.h
Vizir/src/Vizir/Debug/: Instrumentor.h
Vizir/src/Vizir/EventSystem/: ApplicationEvent.h  Event.h
Vizir/src/Vizir/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Vizir/src/Vizir/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Vizir/src/Vizir/Logging/: Log.cpp  Log.h
Vizir/src/Vizir/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Vizir/src/Vizir/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Vizir/src/Vizir/Renderer/: ArcballCameraController.cpp  ArcballCameraController.h  Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RendererCommand.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
